# minghe-companion

./: .env  .env.example  AGENTS.md  CLAUDE.md  README.md  chat_cli.py  frontend.html  generate_report.py  pyproject.toml  railway.json  requirements.txt
knowledge_base/: crisis_keywords.json
knowledge_base/crisis_resources/: hotlines.md
knowledge_base/psychology_basics/: anxiety_management.md  stress_management.md
knowledge_base/therapy_techniques/: cbt_basics.md  mindfulness_meditation.md
src/: __init__.py
src/agents/: __init__.py  psychology_master.py
src/api/: main.py
src/core/: __init__.py  config.py  constants.py  prompt.py
src/llm/: __init__.py  client.py
src/memory/: __init__.py  system.py
src/tools/: __init__.py  assessment.py  base.py  crisis.py  rag.py
tests/: __init__.py
tests/test_memory/: test_system.py
tests/test_tools/: test_assessment.py  test_crisis.py  test_rag.py
