[project]
name = "minghe-companion"
version = "0.1.0"
description = "明禾陪伴 - 心理资讯大师AI Agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Minghe Team", email = "team@minghe.example.com"}
]
keywords = ["ai", "agent", "mental-health", "psychology", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# 核心依赖
dependencies = [
    # LLM框架
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-community>=0.2.0",
    
    # API框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    
    # 向量数据库
    "pgvector>=0.2.0",
    "psycopg2-binary>=2.9.0",
    
    # LLM客户端 - 智谱GLM
    "zhipuai>=2.1.0",
    
    # RAG相关
    "chromadb>=0.5.0",
    "langchain-text-splitters>=0.2.0",
    
    # 工具
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
    
    # 日志
    "python-json-logger>=2.0.0",
    "loguru>=0.7.0",
]

# 开发依赖
[project.optional-dependencies]
dev = [
    # 测试
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.0",
    
    # 代码质量
    "ruff>=0.6.0",
    "black>=24.8.0",
    "isort>=5.13.0",
    "mypy>=1.11.0",
    "pre-commit>=4.0.0",
    
    # 类型
    "types-requests>=2.32.0",
    "types-python-dateutil>=2.9.0",
]

# 示例依赖
example = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[project.urls]
Homepage = "https://github.com/minghe-companion"
Documentation = "https://minghe-companion.readthedocs.io"
Repository = "https://github.com/minghe-companion"
Issues = "https://github.com/minghe-companion/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "C4",     # flake8-comprehensions
    "FA",     # flake8-future-annotations
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "PGH",    # pygrep-hooks
    "PL",     # pylint
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "PLR0913",# too many arguments
    "PLR2004",# magic value comparison
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line-length = 88
multi-line-output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "loguru.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
